--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 28px;
+  font-size: 20px;
   font-weight: 400;
+  letter-spacing: 0;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -11,58 +13,82 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --brand-color: #054c73;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+html {
+  height: 100%;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
-a:hover {
-  color: #535bf2;
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+  caret-color: transparent;
+  letter-spacing: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1600px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100vh;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+input,
+select {
+  caret-color: var(---dark-color);
 }
-button:hover {
-  border-color: #646cff;
+
+.section-header {
+  margin: 0;
+  padding: 0;
+  color: var(---dark-color);
+  font-weight: 600;
+  font-size: 36px;
+  margin-bottom: 20px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.button {
+  padding: 15px 60px;
+  border-radius: 50px;
+  background-color: var(--brand-color);
+  border: 1px solid var(--brand-color);
+  color: #fff;
+  text-decoration: none;
+  transition: background-color 0.5s ease-in-out;
 }
+
+.button:hover {
+  background-color: #fff;
+  color: var(--brand-color);
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
