--- a/src/components/characterList/characterList.css
+++ b/src/components/characterList/characterList.css
@@ -9,6 +9,8 @@
 }
 
 .character-item {
+    width: 200px;
+    height: 350px;
     border-radius: 20px;
     box-shadow: 10px 12px 12px -3px rgba(0, 0, 0, 0.76);
     -webkit-box-shadow: 10px 12px 12px -3px rgba(0, 0, 0, 0.76);
