--- a/src/components/characterList/characterList.css
+++ b/src/components/characterList/characterList.css
@@ -1,16 +1,23 @@
+.total-text{
+    padding: 0;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
 .character-lists {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
+    gap: 25px;
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
 .character-item {
-    width: 200px;
-    height: 350px;
+    width: 230px;
+    height: 355px;
     border-radius: 20px;
     box-shadow: 10px 12px 12px -3px rgba(0, 0, 0, 0.76);
     -webkit-box-shadow: 10px 12px 12px -3px rgba(0, 0, 0, 0.76);
@@ -36,6 +43,10 @@
 
 .character-link:hover {
     color: var(--brand-color);
+}
+
+.character-name{
+    margin: 0;
 }
 
 .loader-wrap {
